--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Earth | Assignment 6</title>
+
+    <!-- main css file -->
+     <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    <!-- daisy ui and talwind css  -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    
 </head>
 <body>
     <h1>Setup the file</h1>
