Added header and hero section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,73 @@
 
     
 </head>
-<body>
-    <h1>Setup the file</h1>
+<body class="font-inter">
+    <header class="bg-[#15803d]">
+        <div class="navbar max-w-[1650px] mx-auto min-h-[90px]">
+            <div class="navbar-start">
+                <div class="dropdown ">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        <li><a>About</a></li>
+                        <li><a>Gallery</a></li>
+                        <li><a>Plant a Tree</a></li>
+                    </ul>
+                </div>
+                <a class=" text-xl text-white ">Green Earth</a>
+            </div>
+            <div class="navbar-center hidden lg:flex text-white text-base font-medium">
+                <ul class="menu menu-horizontal px-1">
+                    <li><a>About</a></li>
+                    <li><a>Gallery</a></li>
+                    <li><a>Plant a Tree</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end">
+                <button class="bg-[#facc15] text-[#15803d] rounded-full py-2 px-3">Plant a Tree</button>
+            </div>    
+        </div>
+    </header>
+
+    <section class="hero bg-no-repeat bg-[#cff0dc]"  style="background-image: url('./assets/hero-leaf1.png'), url('./assets/hero-leaf2.png'); background-position: left bottom, right bottom; background-size: auto, auto; ">
+        <div class="">
+            <div class="hero-content text-neutral-content text-center">
+                <div class="w-[630px] mx-auto my-24">
+                    <h1 class="mb-5 text-5xl font-bold font-bold text-[#202a37]">Plant a Tree, Grow a Future</h1>
+                    <p class="mb-5 text-base text-[#3e5982]">Join our mission to plant 1 million trees and make the Earth greener for future generations.</p>
+                    <button class="bg-[#facc15] text-[#15803d] rounded-full py-2 px-3">Get Involved</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- About the campaign section  -->
+
+    <section>
+        <h2>About the campaign</h2>
+        <div>
+            <div>
+                <img src="./assets/about.png" />
+            </div>
+            <div class="flex ">
+                <p>
+                    Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted
+                    over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and
+                    combat global warming.
+                </p>
+                <ul>
+                    <li>Restoration of natural habitats</li>
+                    <li>Improvement of air quality</li>
+                    <li>Support for local communities</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
