our impact section done

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
 
 
     <!-- our impact section  -->
-     
+     <section class="bg-[#cff0dc] py-15">
+        <h2 class="text-4xl font-bold text-[#202a37] text-center">Our Impact</h2>
+        <div class="flex justify-between gap-4 max-w-[1600px] mx-auto pt-5">
+            <div class="bg-white shadow-lg rounded-lg p-10 text-center items-center flex-1">
+                <h3 class="text-3xl text-[#15803d] font-bold">500k</h3>
+                <p class="text-base text-[#49535d] pt-2">Trees Planted</p>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-10 text-center items-center flex-1">
+                <h3 class="text-3xl text-[#15803d] font-bold">500k</h3>
+                <p class="text-base text-[#49535d] pt-2">Trees Planted</p>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg p-10 text-center items-center flex-1">
+                <h3 class="text-3xl text-[#15803d] font-bold">500k</h3>
+                <p class="text-base text-[#49535d] pt-2">Trees Planted</p>
+            </div>
+        </div>
+     </section>
+
+
 </body>
 </html>
