footer area done

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
             </fieldset>
         </div>
       </footer>
+      <section class="bg-[#14512c] p-3 py-2">
+        <div>
+            <p class="text-base text-white text-center">© 2025 Green Earth. All Rights Reserved.</p>
+        </div>
+      </section>
     
 
 
