showing by cateogry done

--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
         <div class="max-w-[1650px] mx-auto flex gap-6">
             <div class="">
                 <h3 class="text-3xl font-bold">Categories</h3>
-                <div id="tree-categories-container" class="text-xl text-[#1f2937]">
-                    <!-- <button class="btn bg-transparent border-0 rounded-full text-[#1f2937] font-base p-0">fruit tree</button> -->
+                <div  class="text-xl text-[#1f2937]">
+                    <a href="/" class="btn bg-transparent border-0 rounded-full text-[#1f2937] font-base p-0">All Tree</a>
+                    <div id="tree-categories-container">
+                        <!-- <button class="btn bg-transparent border-0 rounded-full text-[#1f2937] font-base p-0">fruit tree</button> -->
+                    </div>
                 </div>
 
             </div>
-            <div id="display-catdetails-container" class="grid grid-cols-1 justify-center sm:grid-cols-2 md:grid-cols-3 gap-4 ">
+            <div id="display-catdetails-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 ">
                 <!-- <div class="single-card p-5 shadow-lg rounded-lg bg-white">
                     <div>
                         <img class="w-full h-full object-cover" src="./assets/about.png" />
