showing all plants when page loads

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="">
                 <h3 class="text-3xl font-bold">Categories</h3>
                 <div  class="text-xl text-[#1f2937]">
-                    <a href="/" class="btn bg-transparent border-0 rounded-full text-[#1f2937] font-base p-0">All Tree</a>
+                    <a  onclick="loadAllPlant()" class="btn bg-transparent border-0 rounded-full text-[#1f2937] font-base p-0">All Tree</a>
                     <div id="tree-categories-container">
                         
                     </div>
