updating the total pricing fixing with hero support

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="p-10">
         <h2 class="text-2xl md:text-4xl font-bold text-center text-[#202a37]">Choose Your Trees</h2>
 
-        <div class="lg:max-w-[1650px] mx-auto block lg:flex gap-6 mt-5">
+        <div class="md:max-w-[1650px] mx-auto block md:flex gap-6 mt-5">
             <div class="w-full md:w-1/7">
                 <h3 class="text-center md:text-left text-xl md:text-2xl font-bold">Categories:</h3>
                 <div  class="text-base text-[#1f2937]">
@@ -102,15 +102,15 @@
             </div>
             <div class="p-5 shadow-lg rounded-lg bg-white w-full md:w-1/5 mt-5 md:mt-0">
                 <h2 class="font-bold text-[#000] text-2xl">Your Cart</h2>
-                <div id="sidebar-container" class="hidden" >
-                    <div id="sidebar-cart-div" class="hidden">
+                <div id="sidebar-container" class="hidden sidebar-cart-container" >
+                    <div id="sidebar-cart-div" class="sidebar-cart-item hidden">
                         <div class="flex items-center justify-between gap-4 rounded-xl bg-[#f1fdf4] p-3 mb-3 mt-3">
                             <div class="pt-4">
                                 <h2 id="added-tree-name" class="text-xl font-bold ">Mango Tree</h2>
                                 <p class="font-normal text-gray-400 text-xl pt-2">৳<span id="added-tree-price">500</span> <i class="fa-solid fa-xmark"></i> 1</p>
                             </div>
                             <div>
-                                <a id="delete-icon" class="text-gray-400"><i class="fa-solid fa-xmark"></i></a>
+                                <a id="delete-icon" class="text-gray-400 delete"><i class="fa-solid fa-xmark"></i></a>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="flex-1 text-base text-[#49535d] ">
                 <p>
-                    Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve Planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and  combat global warming.
+                    Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve Planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
                 </p>
                 <ul class="mt-5 list-disc space-y-2 list-inside" >
                     <li>Restoration of natural habitats</li>
@@ -213,6 +213,9 @@
         </div>
     </section>
     
+
+
+
 
 </body>
 
