--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 
      <!-- Hero section  -->
     <section class="hero bg-[#cff0dc] px-4" >
-        <div class="">
-            <div class="hero-content py-6 lg:p-0 lg:m-0">
-                <div class="hidden lg:block">
+        <div class="w-full">
+            <div class="flex items-center justify-center p-10 md:p-0 md:m-2">
+                <div class="hidden md:block">
                     <img src="./assets/hero-leaf1.png" />
                 </div>
                 <div class="text-center">
-                    <h1 class="mb-5 mt text-2xl md:text-4xl font-bold font-bold text-[#202a37]">Plant a Tree, Grow a Future</h1>
+                    <h1 class="mb-5 text-2xl md:text-4xl font-bold font-bold text-[#202a37]">Plant a Tree, Grow a Future</h1>
                     <p class="mb-5 text-base text-[#3e5982]">Join our mission to plant 1 million trees and make the Earth greener for future generations.</p>
                     <button class="text-lg md:text-2xl font-bold bg-[#facc15] text-[#15803d] rounded-full px-4 py-3">Get Involved</button>
                 </div>
-                <div class="hidden lg:block">
+                <div class="hidden md:block">
                     <img src="./assets/hero-leaf2.png" />
                 </div>
             </div>
