--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <option>16-20</option>
                 </select>
                 <button type="submit"
-                    class="bg-[#facc15] text-[#15803d] rounded-full py-3 px-3 w-full mt-3 text-lg md:text-xl font-bold">Get Involved</button>
+                    class="bg-[#facc15] text-[#15803d] rounded-full py-3 px-3 w-full mt-3 text-lg md:text-xl font-bold">Donate Now</button>
             </fieldset>
         </div>
     </footer>
